A1SLDT-891: Test cases modification according to new API updates
